--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "blaze-slider": "^1.9.3",
     "framer-motion": "^11.1.9",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-fast-marquee": "^1.6.4"
+    "react-fast-marquee": "^1.6.4",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.2"
   },
   "devDependencies": {
     "eslint": "^8",
