--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "blaze-slider": "^1.9.3",
+    "@react-email/components": "0.0.17",
     "framer-motion": "^11.1.9",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
-    "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.2"
   },
   "devDependencies": {
+    "@types/node": "20.12.12",
+    "@types/react": "18.3.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
