--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-email/components": "0.0.17",
     "framer-motion": "^11.1.9",
     "next": "^14.2.3",
+    "next-intl": "^3.14.0",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
